add recipe route to index
